views added, styles added

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,6 +9,11 @@ body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
     margin-top: 70px;
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../img/blur.jpg');
+    background-size:cover;
+    background-position:center top;
+    background-repeat:no-repeat;
+    font-family: 'PT Sans', sans-serif;
 }
 
 .footer {
@@ -36,4 +41,77 @@ body {
 .td {
     margin: 0 !important;
     padding: 0 !important;
+}
+
+.input-group-addon.danger {
+    color: rgb(255, 255, 255);
+    background-color: rgb(217, 83, 79);
+    border-color: rgb(212, 63, 58);
+}
+
+.navbar-default {
+    background-color: #0d0d0d;
+    border-color: #242424;
+}
+.navbar-default .navbar-brand {
+    color: #ecf0f1;
+}
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+    color: #24abdb;
+}
+.navbar-default .navbar-text {
+    color: #ecf0f1;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #ecf0f1;
+}
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    color: #24abdb;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: #24abdb;
+    background-color: #242424;
+}
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+    color: #24abdb;
+    background-color: #242424;
+}
+.navbar-default .navbar-toggle {
+    border-color: #242424;
+}
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: #242424;
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #ecf0f1;
+}
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+    border-color: #ecf0f1;
+}
+.navbar-default .navbar-link {
+    color: #ecf0f1;
+}
+.navbar-default .navbar-link:hover {
+    color: #24abdb;
+}
+
+@media (max-width: 767px) {
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+        color: #ecf0f1;
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+        color: #24abdb;
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+        color: #24abdb;
+        background-color: #242424;
+    }
+}
+
+.footer {
+    background-color: #0d0d0d;
+    border-color: #242424;
+    color: #ecf0f1;
+    padding-top: 20px;
 }
